--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -16,40 +16,43 @@
     <!--center-side group-->
     <li class="top-child">
         <!--search bar-->
-        <div id="search-bar">
-            <form id="search-bar-form">
-                <input id="search-bar-input" type="search" id="query" placeholder="Search..">
-                <button id="search-bar-button"><img src="/img/search.png"></button>
-            </form>
-        </div>
+        <!-- <div id="search-bar"> -->
+            <!-- <form id="search-bar-form"> -->
+                <!-- <input id="search-bar-input" type="search" id="query" placeholder="Search.."> -->
+                <!-- <button id="search-bar-button"><img src="/img/search.png"></button> -->
+            <!-- </form> -->
+        <!-- </div> -->
+        
+    </li>
+
+    <!--right-side group-->
+    <li class="top-child">
         <!--light/dark mode-->
         <div id="mode">
             <button id="color-theme" onclick="lightDarkMode()">
                 <img src="/img/light.png" id="theme-icon">
             </button>
         </div>
-    </li>
-
-    <!--right-side group-->
-    <li class="top-child">
         <!--greeting-->
         <div id="greeting">
-            <p class="font-white" id="top">Hi, <%= username %>!
-            </p>
-            <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
+            <a href="/user">
+                <p class="font-white" id="top">Hi, <%= username %>!</p>
+                <p class="font-white" id="bottom">Welcome to <span class="font-peach">Iloilo City!</span></p>
+            </a>
+            
         </div>
         <!--user-->
-        <% if (username != 'Guest') { %>
+        <!-- <% if (username != 'Guest') { %> -->
             <!--IF USER ACCOUNT-->
-            <div id="user">
+            <!-- <div id="user"> -->
                 <!--src="/img/user-image.jpg"-->
-                <a href="/user"><img id="user-picture" alt="User picture"></a>
-            </div>
-        <% } else { %>
+                <!-- <a href="/user"><img id="user-picture" alt="User picture"></a> -->
+            <!-- </div> -->
+        <!-- <% } else { %> -->
             <!--IF GUEST ACCOUNT-->
-            <div id="user">
-                <a href="/user"><img id="user-picture" src="/img/placeholder.jpg" alt="User picture"></a>
-            </div>
-        <% } %>
+            <!-- <div id="user"> -->
+                <!-- <a href="/user"><img id="user-picture" src="/img/placeholder.jpg" alt="User picture"></a> -->
+            <!-- </div> -->
+        <!-- <% } %> -->
     </li>
 </ul>
