Initial layout of accommodate-page

--- a/views/pages/accommodate-page.ejs
+++ b/views/pages/accommodate-page.ejs
@@ -18,9 +18,9 @@
             <img>
         </div>
         <div id="accomm_details">
-            <p id="accomm_title"><%= title %></p>
-            <p id="accomm_address"><%= address %></p>
-            <p id="accomm_description"><%= description %></p>
+            <p id="accomm_title">Title</p>
+            <p id="accomm_address">Address</p>
+            <p id="accomm_description">Description</p>
             <div id="accomm_buttons">
                 <button id="accomm_availability">Check Availability</button>
                 <button id="accomm_directions">Get Directions</button>
