--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -2,7 +2,6 @@
 <!-- This html document uses EJS -->
 
 <html>
-
 <head>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,22 +11,24 @@
 </head>
 
 <body>
-
-
     <!-- side-nav-bar.ejs -->
     <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
 
-            <div id="search1">
-                <div id="search_header">
-                    <p>Search results for:</p>
+            <div id="search-body">
+                <div id="search-header">
+                    <p class="font-white">Search results for "Stuff":</p>
                 </div>
                 <div id="search-outputs">
-                    <p>Search results for:</p>
+                    <div id="wrap">
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                        <%- include('../partials/dummyfood'); %>
+                    </div>
                 </div>
             </div>
-
 </body>
-
 </html>
