--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -1,6 +1,6 @@
 <ul id="top-nav-bar">
     <!--left-side group-->
-    <li class="top-child" id="menu-child">
+    <li class="top-child">
         <!--button for side navigation bar-->
         <div id="menu">
             <button onclick="showHide()">
@@ -11,12 +11,10 @@
         <div id="home">
             <a id="home-btn" href="/">LAGAW</a>
         </div>
-        <div id="menu-space">
-        </div>
     </li>
 
     <!--center-side group-->
-    <li class="top-child" id="search-child">
+    <li class="top-child">
         <!--search bar-->
         <div id="search-bar">
             <form id="search-bar-form">
@@ -27,7 +25,7 @@
     </li>
 
     <!--right-side group-->
-    <li class="top-child" id="user-child">
+    <li class="top-child">
         <!--light/dark mode-->
         <div id="mode">
             <button id="color-theme" onclick="lightDarkMode()">
