--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2,7 +2,7 @@
 
 /* * {
     border: 1px solid black;
-} * */
+} */
 
 
 /* UNIVERSAL ELEMENTS */
@@ -44,33 +44,6 @@ p {
     z-index: 1;
 }
 
-@media (max-width: 779px) {
-    /* #top-nav-bar {
-        justify-content: center;
-    }*/
-
-    /* .top-child {
-        padding-top: 1px;
-        padding-bottom: 1px;
-    } */
-
-    #side-nav-bar {
-        /*height: idk pa huhu need mag santo sa dalom sng top-nav-bar;*/
-    }
-
-    .side-child a div p {
-        visibility: hidden;
-    }
-
-    .font-white {
-        font-size: 10px;
-    }
-
-    .font-black {
-        font-size: 10px;
-    }
-}
-
 .top-child {
     list-style-type: none;
     display: flex;
@@ -90,6 +63,10 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#menu-space{
+    visibility: hidden;
 }
 
 
@@ -120,7 +97,7 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 300px;
+    width: 335px;
 }
 
 #search-bar-input {
@@ -169,10 +146,10 @@ input[type=search] {
     margin-right: 10px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
-#greeting>a>#top {
+#greeting #top {
     font-weight: 800;
     font-size: 18px;
     color: white
@@ -530,13 +507,6 @@ a:hover {
     font-weight: 400;
 }
 
-.card-body {
-    width: 700px;
-    font-size: 30px;
-    
-}
-
-
 .transparent-background-left {
     display: flex;
     align-items: center;
@@ -720,15 +690,9 @@ a:hover {
 }
 
 .card img {
-    width: 20rem;
-    height: 20rem;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    padding-right:50px;
-    object-fit:cover;
-    border-radius:10px;
-    padding-top:1px;
-    
-
 }
 
 .carousel>button {
@@ -925,23 +889,7 @@ input:focus {
 
 }
 
-
-#uin-one-third-column {
-
-    display: flex;
-    height: 50px;
-    width: 500px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    text-align: left;
-    height: 80%;
-    width: 100%;
-    padding-top: 30px;
-}
-
-
-.center-buttons {
+.center {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -1035,7 +983,7 @@ input:focus {
     border-style: solid;
 }
 
-#userbody div p {
+#userbody>div>p, #userheadergroup p {
     font-size: 30px;
 }
 
@@ -1044,4 +992,151 @@ input:focus {
     justify-content: space-between;
     flex-direction: row;
     width: 450px;
+}
+
+/*
+
+SEARCH PAGE
+
+*/
+
+#search-body {
+    background: #383838;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 800px;
+    padding: 0;
+}
+
+#search-header,
+#search-outputs {
+    padding: 0 30px 0 30px;
+    background-color: #383838;
+}
+
+#search-header>p{
+    margin: 0;
+    padding: 20px 0;
+    font-size: 30px;
+}
+
+/*ACCOMMODATE FETCH PAGE*/
+
+#accomm-body{
+    display: flex;
+    background: #F2F2F2;
+    width: 100%;
+    height: 747px;
+}
+
+#accomm-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+}
+
+#accomm-img>img{
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
+
+#accomm-details{
+    background: #1B1B1B;
+    height: 100%;
+    min-width: 350px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+#accomm-group{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#accomm-title{
+    font-size: 50px;
+}
+
+#accomm-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 300px;
+    height: 100px;
+}
+
+#accomm-buttons>button{
+    width: 100%;
+    height: 100%;
+    background-color: #383838;
+    margin: 2px 0;
+    border-radius: 6px;
+    padding: 6px;
+}
+
+
+
+
+/*MUST BE BELOW EVERYTHING ALL THE TIME*/
+@media (max-width: 779px) {
+    #top-nav-bar {
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #menu-child{
+        /* padding-top: 1px;
+        padding-bottom: 1px; */
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    #menu-space{
+        visibility: visible;
+        width: 80px;
+    }
+
+    #side-nav-bar {
+        /*height: idk pa huhu need mag santo sa dalom sng top-nav-bar;*/
+    }
+
+    .side-child a div p {
+        visibility: hidden;
+    }
+
+    .font-white {
+        font-size: 10px;
+    }
+
+    .font-black {
+        font-size: 10px;
+    }
+
+    .top-child>#search-bar>#search-bar-form {
+        align-items: center;
+        justify-content: center;
+        width: 210px;
+    }
+
+    #search-bar-input {
+        width: 90%;
+    }
+
+    .two-vertical-panels {
+        flex-direction: column;
+    }
+
+    #food-header-group #content{
+        width: 100%;
+    }
 }
