--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <!-- This html document uses EJS -->
 <html>
-    <head>
-        <!-- heads.ejs -->
-        <%- include('../partials/head'); %>
-    </head>
-    <body>
-        <!-- side-nav-bar.ejs -->
-        <%- include('../partials/side-nav-bar'); %>
+
+<head>
+    <!-- heads.ejs -->
+    <%- include('../partials/head'); %>
+</head>
+
+<body>
+    <!-- side-nav-bar.ejs -->
+    <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-        <div id="foodbg">
-            <div id="transparent-background-food">
-                <div id="foodbg1">
-                    <p class="font-white" id="secondtitle">Places and Landmarks</p>
-                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
-                        parchment wingardium.
-                        Wand betrayal parseltongue soul detention elf lion back his.
-                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
-                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
-                        Bat forbidden cabbage parchment sunshine.
-                        Bag moon ground moon quidditch sight grim.
-                    </p>
-                </div>
-            </div>
-        </div>
-        
-        <div id="food1">
-            <div id="food11">
-                <div id="food111">
-                    <p class="font-black" id="thirdtitle">Places You Must <span class="font-peach">Visit</span></p>
-                    <div class="filter-row">
-                        <p class="font-black">Sort By:</p>
-                        <button>Name</button>
-                        <button>Date</button>
-                    </div>
-                </div>
-                    <!-- Just a dummy to show -->
-                    <div id="wrap">
-                        <%- include('../partials/dummylist'); %>
-                        <%- include('../partials/dummylist'); %>
-                        <%- include('../partials/dummylist'); %>
-                        <%- include('../partials/dummylist'); %>
+            <div id="food-header">
+                <div id="transparent-background-food">
+                    <div id="food-header-group">
+                        <p class="font-white" id="second-title">Places and Landmarks</p>
+                        <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
+                            parchment wingardium.
+                            Wand betrayal parseltongue soul detention elf lion back his.
+                            Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
+                            Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
+                            Bat forbidden cabbage parchment sunshine.
+                            Bag moon ground moon quidditch sight grim.
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
 
-    </body>
+            <div id="food-body">
+                <div id="food-body-group">
+                    <div id="body-header">
+                        <p class="font-black" id="third-title">Places You Must <span class="font-peach">Visit</span></p>
+                        <div class="filter-row">
+                            <p class="font-black">Sort By:</p>
+                            <button>Name</button>
+                            <button>Date</button>
+                        </div>
+                        <!-- Just a dummy to show -->
+                        <div id="wrap">
+                            <%- include('../partials/dummyfood'); %>
+                                <%- include('../partials/dummyfood'); %>
+                                    <%- include('../partials/dummyfood'); %>
+                                        <%- include('../partials/dummyfood'); %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+</body>
+
 </html>
